src/objects/Requerimientos__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <formula>$User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Consecutivo_de_la_solicitud__c</fullName>
        <label>Consecutivo de la solicitud</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costo__c</fullName>
        <inlineHelpText>Costo total del proyecto</inlineHelpText>
        <label>Costo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_1__c</fullName>
        <label>¿Cual?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kypello</fullName>
                </value>
                <value>
                    <fullName>Avanxo</fullName>
                </value>
                <value>
                    <fullName>ITAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cual__c</fullName>
        <label>¿Cual?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Proveedor__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kypello</fullName>
                </value>
                <value>
                    <fullName>Avanxo</fullName>
                </value>
                <value>
                    <fullName>ITAC</fullName>
                </value>
                <value>
                    <fullName>Kypello/CF</fullName>
                </value>
                <value>
                    <fullName>ITAC/CF</fullName>
                </value>
                <value>
                    <fullName>Avanxo/CF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detalle__c</fullName>
        <label>Detalle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Estado_del_proyecto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pruebas técnicas</fullName>
                </value>
                <value>
                    <fullName>Pruebas de usuario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_lider_de_proyecto__c</fullName>
        <label>Email lider de proyecto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estado_del_proyecto__c</fullName>
        <label>Estado del proyecto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitado</fullName>
                    <default>true</default>
                    <label>Solicitado</label>
                </value>
                <value>
                    <fullName>Asignado</fullName>
                </value>
                <value>
                    <fullName>Análisis</fullName>
                </value>
                <value>
                    <fullName>Análisis (Proveedor)</fullName>
                </value>
                <value>
                    <fullName>Diseño del documento</fullName>
                </value>
                <value>
                    <fullName>Planeación</fullName>
                </value>
                <value>
                    <fullName>Desarrollo</fullName>
                </value>
                <value>
                    <fullName>Pruebas</fullName>
                </value>
                <value>
                    <fullName>Entregado</fullName>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
                <value>
                    <fullName>Suspendido</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_del_requerimiento__c</fullName>
        <label>Estado del requerimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abierto</fullName>
                    <default>true</default>
                    <label>Abierto</label>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
                <value>
                    <fullName>Reabierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_de_asignacion__c</fullName>
        <label>Fecha de asignación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_cierre__c</fullName>
        <label>Fecha de cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_incio__c</fullName>
        <label>Fecha de incio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_estimada_de_entrega__c</fullName>
        <label>Fecha estimada de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hora_de_finalizacion__c</fullName>
        <label>Hora de finalización</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hora_de_inicio__c</fullName>
        <label>Hora de inicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lider_del_proyecto__c</fullName>
        <label>Lider del proyecto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claudia Angel</fullName>
                </value>
                <value>
                    <fullName>Juan Uribe</fullName>
                </value>
                <value>
                    <fullName>Angel</fullName>
                </value>
                <value>
                    <fullName>Hernan Galeano</fullName>
                </value>
                <value>
                    <fullName>Cristina Gil</fullName>
                </value>
                <value>
                    <fullName>Juan Toro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modulo_de_incidencia__c</fullName>
        <label>Módulo de incidencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidatos</fullName>
                </value>
                <value>
                    <fullName>Clientes/Convenios</fullName>
                </value>
                <value>
                    <fullName>Oportunidades</fullName>
                </value>
                <value>
                    <fullName>Prevalidador</fullName>
                </value>
                <value>
                    <fullName>Solicitud de crédito</fullName>
                </value>
                <value>
                    <fullName>Radicación</fullName>
                </value>
                <value>
                    <fullName>Información comité</fullName>
                </value>
                <value>
                    <fullName>Referenciación</fullName>
                </value>
                <value>
                    <fullName>Constructoras</fullName>
                </value>
                <value>
                    <fullName>Proyecto</fullName>
                </value>
                <value>
                    <fullName>Paneles</fullName>
                </value>
                <value>
                    <fullName>Informes</fullName>
                </value>
                <value>
                    <fullName>Usuarios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_de_la_constructora__c</fullName>
        <label>Nombre de la constructora</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_del_informe__c</fullName>
        <label>Nombre del informe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_del_panel__c</fullName>
        <label>Nombre del panel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_del_proyecto_P__c</fullName>
        <label>Nombre del proyecto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_proyecto__c</fullName>
        <label>Nombre del proyecto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nota__c</fullName>
        <formula>IF( TEXT(Tipo_de_incidencia__c)=&quot;Panel nuevo&quot;,&quot;El tiempo de respuesta varía de acuerdo a la complejidad del requerimiento&quot;,  
IF( TEXT(Tipo_de_incidencia__c)=&quot;Informes nuevos&quot;, &quot;El tiempo de respuesta varía de acuerdo a la complejidad del requerimiento&quot;, 
IF( TEXT(Tipo_de_incidencia__c)=&quot;Consulta en espera de Data&quot;,&quot;El tiempo de respuesta varía de acuerdo a la falla de origen.&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Consulta en espera de CIFIN&quot;,&quot;El tiempo de respuesta varía de acuerdo a la falla de origen.&quot;, 
IF( TEXT(Tipo_de_incidencia__c)=&quot;Consulta en espera de VIGIA&quot;,&quot;El tiempo de respuesta varía de acuerdo a la falla de origen.&quot;, 
IF( TEXT(Tipo_de_incidencia__c)=&quot;Error Java&quot;,&quot;El tiempo de respuesta varía de acuerdo a la falla de origen.&quot;, NULL

))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nota</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_documento__c</fullName>
        <label>Número documento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacion__c</fullName>
        <label>Observación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Porcentaje_de_avance__c</fullName>
        <inlineHelpText>Porcentaje avance del proyecto</inlineHelpText>
        <label>Porcentaje de avance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>45%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>55%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>65%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>85%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>95%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridad__c</fullName>
        <label>Prioridad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Urgente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.MiddleName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proveedor__c</fullName>
        <label>Proveedor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>En búsqueda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>$User.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respuesta__c</fullName>
        <label>Respuesta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tiempo_EJ__c</fullName>
        <formula>((floor((Hora_de_finalizacion__c -   Hora_de_inicio__c)*24))
+
(((((Hora_de_finalizacion__c -   Hora_de_inicio__c)*24)-floor((Hora_de_finalizacion__c -   Hora_de_inicio__c)*24))*60)/100))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tiempo EJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tiempo_de_ejecucion__c</fullName>
        <label>Tiempo de ejecución</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tiempo_de_respuesta__c</fullName>
        <formula>IF( TEXT(Tipo_de_incidencia__c)=&quot;Eliminar registro&quot;,&quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Otro&quot;,&quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Cambio tipo de registro&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Marcación canal digital&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Cambio de nombres migrados&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Relacionar codeudores&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Consulta en espera de Data&quot;, &quot;24 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Consulta en espera de CIFIN&quot;, &quot;24 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Consulta en espera de CIFIN&quot;, &quot;24 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Error Java&quot;, &quot;24 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Cambio tipo de registro&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Relación de codeudores&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Cambio de propietario&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;No actualiza datos&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Error de cálculo&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Cambio de correo&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Panel nuevo&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Inconsistencia en la información&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Eliminar panel&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Informes nuevos&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Eliminar informe&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Creación de usuarios&quot;, &quot;8 Hr laborales&quot;,
IF( TEXT(Tipo_de_incidencia__c)=&quot;Bloqueo de usuarios&quot;, &quot;8 Hr laborales&quot;,NULL


)))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Este campo indica el tiempo máximo de respuesta.</inlineHelpText>
        <label>Tiempo de respuesta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_incidencia__c</fullName>
        <label>Tipo de incidencia</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Modulo_de_incidencia__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marcación canal digital</fullName>
                </value>
                <value>
                    <fullName>Cambio de nombres migrados</fullName>
                </value>
                <value>
                    <fullName>Relacionar codeudores</fullName>
                </value>
                <value>
                    <fullName>Consulta en espera de Data</fullName>
                </value>
                <value>
                    <fullName>Consulta en espera de CIFIN</fullName>
                </value>
                <value>
                    <fullName>Consulta en espera de VIGIA</fullName>
                </value>
                <value>
                    <fullName>Error Java</fullName>
                </value>
                <value>
                    <fullName>Cambio tipo de registro</fullName>
                </value>
                <value>
                    <fullName>Relación de codeudores</fullName>
                </value>
                <value>
                    <fullName>Cambio de propietario</fullName>
                </value>
                <value>
                    <fullName>No actualiza datos</fullName>
                </value>
                <value>
                    <fullName>Error de cálculo</fullName>
                </value>
                <value>
                    <fullName>Cambio de correo</fullName>
                </value>
                <value>
                    <fullName>Panel nuevo</fullName>
                </value>
                <value>
                    <fullName>Inconsistencia en la información</fullName>
                </value>
                <value>
                    <fullName>Eliminar panel</fullName>
                </value>
                <value>
                    <fullName>Informes nuevos</fullName>
                </value>
                <value>
                    <fullName>Eliminar informe</fullName>
                </value>
                <value>
                    <fullName>Creación de usuarios</fullName>
                </value>
                <value>
                    <fullName>Bloqueo de usuarios</fullName>
                </value>
                <value>
                    <fullName>Status asesor</fullName>
                </value>
                <value>
                    <fullName>Eliminar registro</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_registro__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de registro</label>
        <type>Text</type>
    </fields>
    <label>Requerimiento</label>
    <listViews>
        <fullName>Mis_requerimientos</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Tipo_de_incidencia__c</columns>
        <columns>Estado_del_requerimiento__c</columns>
        <columns>Propietario__c</columns>
        <filterScope>Mine</filterScope>
        <label>Mis requerimientos</label>
    </listViews>
    <listViews>
        <fullName>Requerimientos_Abiertos</fullName>
        <columns>NAME</columns>
        <columns>Modulo_de_incidencia__c</columns>
        <columns>Tipo_de_incidencia__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Propietario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Estado_del_requerimiento__c</field>
            <operation>equals</operation>
            <value>Abierto</value>
        </filters>
        <label>Requerimientos Abiertos</label>
        <sharedTo>
            <roleAndSubordinates>Analista_de_Mercadeo</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_credito</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Barranquilla</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Bucaramanga</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Cali</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Medellin</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Pereira</roleAndSubordinates>
            <roleAndSubordinates>Asesor_de_Captacion</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Barranquilla</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Bogota</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Bucaramanga</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Cali</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Medellin</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Pereira</roleAndSubordinates>
            <roleAndSubordinates>Asor_de_leads</roleAndSubordinates>
            <roleAndSubordinates>Auditor</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_Juridica</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_control_de_calidad</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_Desembolsos</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_archivo</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_cierre</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_operaciones</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_referenciacion</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_servicio_al_cliente</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_tramites</roleAndSubordinates>
            <roleAndSubordinates>Contador</roleAndSubordinates>
            <roleAndSubordinates>Coordinador_comercial</roleAndSubordinates>
            <roleAndSubordinates>Coordinadora_de_credito</roleAndSubordinates>
            <roleAndSubordinates>Director_de_Cartera</roleAndSubordinates>
            <roleAndSubordinates>Director_de_Operaciones</roleAndSubordinates>
            <roleAndSubordinates>Gerente_Canal_Digital</roleAndSubordinates>
            <roleAndSubordinates>Gerente_de_riesgos</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Barranquilla</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Bogota</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Bucaramanga</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Cali</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Medellin</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Pereira</roleAndSubordinates>
            <roleAndSubordinates>Lider_de_cumplimiento_de_producto</roleAndSubordinates>
            <roleAndSubordinates>Lider_de_cumplimiento_financiero</roleAndSubordinates>
            <roleAndSubordinates>Presidente</roleAndSubordinates>
            <roleAndSubordinates>Secretaria_General</roleAndSubordinates>
            <roleAndSubordinates>Supernumerario</roleAndSubordinates>
            <roleAndSubordinates>Vicepresidente</roleAndSubordinates>
            <roleAndSubordinates>Vicepresidente_comercial</roleAndSubordinates>
            <roleAndSubordinates>Vicepresidente_de_Operaciones_y_Tecnologia</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Requerimientos_Cerrados</fullName>
        <columns>NAME</columns>
        <columns>Modulo_de_incidencia__c</columns>
        <columns>Tipo_de_incidencia__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Estado_del_requerimiento__c</field>
            <operation>equals</operation>
            <value>Cerrado</value>
        </filters>
        <label>Requerimientos Cerrados</label>
        <sharedTo>
            <roleAndSubordinates>Analista_de_Mercadeo</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_credito</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Barranquilla</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Bucaramanga</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Cali</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Medellin</roleAndSubordinates>
            <roleAndSubordinates>Analista_de_operaciones_Pereira</roleAndSubordinates>
            <roleAndSubordinates>Asesor_de_Captacion</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Barranquilla</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Bogota</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Bucaramanga</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Cali</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Medellin</roleAndSubordinates>
            <roleAndSubordinates>Asor_Cial_Pereira</roleAndSubordinates>
            <roleAndSubordinates>Asor_de_leads</roleAndSubordinates>
            <roleAndSubordinates>Auditor</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_Juridica</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_control_de_calidad</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_Desembolsos</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_archivo</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_cierre</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_operaciones</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_referenciacion</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_servicio_al_cliente</roleAndSubordinates>
            <roleAndSubordinates>Auxiliar_de_tramites</roleAndSubordinates>
            <roleAndSubordinates>Contador</roleAndSubordinates>
            <roleAndSubordinates>Coordinador_comercial</roleAndSubordinates>
            <roleAndSubordinates>Coordinadora_de_credito</roleAndSubordinates>
            <roleAndSubordinates>Director_de_Cartera</roleAndSubordinates>
            <roleAndSubordinates>Director_de_Operaciones</roleAndSubordinates>
            <roleAndSubordinates>Gerente_Canal_Digital</roleAndSubordinates>
            <roleAndSubordinates>Gerente_de_riesgos</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Barranquilla</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Bogota</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Bucaramanga</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Cali</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Medellin</roleAndSubordinates>
            <roleAndSubordinates>Gte_Cial_Pereira</roleAndSubordinates>
            <roleAndSubordinates>Lider_de_cumplimiento_de_producto</roleAndSubordinates>
            <roleAndSubordinates>Lider_de_cumplimiento_financiero</roleAndSubordinates>
            <roleAndSubordinates>Presidente</roleAndSubordinates>
            <roleAndSubordinates>Secretaria_General</roleAndSubordinates>
            <roleAndSubordinates>Supernumerario</roleAndSubordinates>
            <roleAndSubordinates>Vicepresidente</roleAndSubordinates>
            <roleAndSubordinates>Vicepresidente_comercial</roleAndSubordinates>
            <roleAndSubordinates>Vicepresidente_de_Operaciones_y_Tecnologia</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Tipo_de_incidencia__c</columns>
        <columns>Estado_del_requerimiento__c</columns>
        <columns>Propietario__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requerimientos</pluralLabel>
    <recordTypes>
        <fullName>Incidencias</fullName>
        <active>true</active>
        <label>Incidencias</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proyectos</fullName>
        <active>true</active>
        <label>Proyectos</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RQ001_Solicitud_de_credito</fullName>
        <active>true</active>
        <description>Valida que se diligencien los campos consecutivo de la solicitud y número de documento cuando se indica en el campo módulo de incidencia &quot;Solicitud de crédito&quot;.</description>
        <errorConditionFormula>(ISPICKVAL( Modulo_de_incidencia__c , &quot;Solicitud de crédito&quot;)&amp;&amp;

( ISBLANK( Consecutivo_de_la_solicitud__c )  ||
 ISBLANK( Observacion__c )  ||
 ISBLANK( Numero_documento__c ) ))</errorConditionFormula>
        <errorMessage>RQ-001.Cuando indica en el campo módulo de incidencia: &quot;Solicitud de crédito&quot;, debe diligenciar los campos consecutivo de la solicitud, número de documento y observación.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RQ002_Candidatos</fullName>
        <active>true</active>
        <description>Valida que se diligencien los campos número de documento y observación cuando se indica en el campo módulo de incidencia &quot;Candidatos&quot;.</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Modulo_de_incidencia__c, &quot;Candidatos&quot;) ,
 OR(
 ISBLANK(Numero_documento__c) ,
 ISBLANK(Observacion__c) 

) )</errorConditionFormula>
        <errorMessage>RQ-002.Cuando indica en el campo módulo de incidencia: &quot;Candidatos&quot;, debe diligenciar los campos número de documento y observación.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RQ003_Clientes_Convenios</fullName>
        <active>true</active>
        <description>Valida que se diligencien los campos número de documento y observación cuando se indica en el campo módulo de incidencia &quot;Clientes/Convenios&quot;.</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Modulo_de_incidencia__c, &quot;Clientes/Convenios&quot;) ,
 OR( 
 ISBLANK(Numero_documento__c) ,
 ISBLANK(Observacion__c) 

) )</errorConditionFormula>
        <errorMessage>RQ-003.Cuando indica en el campo módulo de incidencia: &quot;Clientes/Convenios&quot;, debe diligenciar los campos número de documento y observación.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RQ004_Oportunidades</fullName>
        <active>true</active>
        <description>Valida que se diligencien los campos número de documento y observación cuando se indica en el campo módulo de incidencia &quot;Clientes/Convenios&quot;.</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Modulo_de_incidencia__c , &quot;Oportunidades&quot;),
 OR(
 ISBLANK( Observacion__c )  , 
 ISBLANK( Numero_documento__c ) 

))</errorConditionFormula>
        <errorMessage>RQ-004.Cuando indica en el campo módulo de incidencia: &quot;Oportunidades&quot;, debe diligenciar los campos número de documento y observación</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RQ005_Prevalidador</fullName>
        <active>true</active>
        <description>Valida que se diligencien los campos número de documento y observación cuando se indica en el campo módulo de incidencia &quot;Clientes/Convenios&quot;.</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Modulo_de_incidencia__c , &quot;Prevalidador&quot;),
 OR(
 ISBLANK( Observacion__c )  , 
 ISBLANK( Numero_documento__c ) 

))</errorConditionFormula>
        <errorMessage>RQ-005.Cuando indica en el campo módulo de incidencia: &quot;Prevalidador&quot;, debe diligenciar los campos número de documento y observación.</errorMessage>
    </validationRules>
</CustomObject>